force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>inwise Activity</label>
    <nameField>
        <displayFormat>AN-{00}</displayFormat>
        <label>Activity No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>