force-app/main/default/objects/Activity__c/fields/Additional_Data__c.field-meta.xml
<CustomField>
    <fullName>Additional_Data__c</fullName>
    <label>Additional Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>