force-app/main/default/objects/Activity__c/fields/inwise_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>inwise_CampaignId__c</fullName>
    <label>inwise CampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>