force-app/main/default/objects/Activity__c/fields/inwiseId__c.field-meta.xml
<CustomField>
    <fullName>inwiseId__c</fullName>
    <label>inwiseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>