force-app/main/default/objects/Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>inwise Activity</relationshipLabel>
    <relationshipName>inwise_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>