force-app/main/default/objects/Activity__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>SalesforceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>