force-app/main/default/objects/Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Date__c</columns>
    <columns>Action_Type__c</columns>
    <columns>inwiseId__c</columns>
    <columns>Additional_Data__c</columns>
    <columns>SalesforceId__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Lead__c</columns>
    <columns>inwise_CampaignId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>